--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif; }
 
 .navbar {
-  background-color: orange;
+  background-color: #FFB800;
   height: 70px; }
   .navbar .navbar-brand {
     margin-left: 60px;
@@ -13,10 +15,81 @@
     margin-left: 860px;
     font-weight: bold; }
 
+#ball {
+  animation: basket 10s infinite linear;
+  transform-origin: center;
+  transform-box: fill-box; }
+
+@keyframes basket {
+  from {
+    transform: translate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
 .content {
   width: 100%;
-  height: 700px;
-  background-color: black; }
+  height: 500px;
+  background-color: black;
+  display: flex; }
+  .content .text {
+    width: 50%;
+    height: 100%; }
+    .content .text .text-content {
+      margin-left: 70px;
+      margin-top: 100px;
+      color: white; }
+      .content .text .text-content p {
+        color: #FFB800; }
+      .content .text .text-content span {
+        color: #FFB800; }
+      .content .text .text-content button {
+        width: 120px;
+        height: 45px;
+        border-radius: 5px;
+        margin-top: 40px;
+        border: none;
+        outline: none; }
+      .content .text .text-content .btn-hire {
+        background-color: #FFB800; }
+      .content .text .text-content .btn-resume {
+        border: 1px solid white;
+        color: white;
+        background-color: black; }
+  .content .hero {
+    width: 50%;
+    height: 100%;
+    position: relative; }
+    .content .hero .box-one {
+      width: 200px;
+      height: 250px;
+      background-color: #FFB800;
+      position: absolute;
+      top: 70px;
+      left: 150px;
+      border: 1px solid rgba(255, 255, 255, 0.603);
+      border-radius: 5px; }
+    .content .hero .box-two {
+      width: 200px;
+      height: 250px;
+      background-color: #FFB800;
+      position: absolute;
+      top: 110px;
+      left: 200px;
+      border: 1px solid rgba(255, 255, 255, 0.603);
+      border-radius: 5px; }
+    .content .hero .box-three {
+      width: 200px;
+      height: 250px;
+      background-color: #FFB800;
+      position: absolute;
+      top: 150px;
+      left: 130px;
+      border: 1px solid rgba(255, 255, 255, 0.603);
+      border-radius: 5px; }
+    .content .hero .ball {
+      position: absolute;
+      right: 60px;
+      bottom: 10px; }
 
 @media (max-width: 576px) {
   .navbar {
