--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,26 @@
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif; }
 
+html {
+  scroll-behavior: smooth;
+  /* Track */
+  /* Handle */ }
+  html ::-webkit-scrollbar {
+    width: 10px; }
+  html ::-webkit-scrollbar-track {
+    background: black; }
+  html ::-webkit-scrollbar-thumb {
+    background: #FFB800; }
+  html ::-webkit-scrollbar-thumb:window-inactive {
+    background: black; }
+
 .navbar {
   background-color: #FFB800;
-  height: 70px; }
+  height: 70px;
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  width: 100%; }
   .navbar .navbar-brand {
     margin-left: 60px;
     font-weight: bold; }
@@ -15,22 +32,12 @@
     margin-left: 860px;
     font-weight: bold; }
 
-#ball {
-  animation: basket 10s infinite linear;
-  transform-origin: center;
-  transform-box: fill-box; }
-
-@keyframes basket {
-  from {
-    transform: translate(0deg); }
-  to {
-    transform: rotate(360deg); } }
-
 .content {
   width: 100%;
   height: 500px;
   background-color: black;
-  display: flex; }
+  display: flex;
+  margin-top: 70px; }
   .content .text {
     width: 50%;
     height: 100%; }
@@ -86,10 +93,43 @@
       left: 130px;
       border: 1px solid rgba(255, 255, 255, 0.603);
       border-radius: 5px; }
-    .content .hero .ball {
-      position: absolute;
-      right: 60px;
-      bottom: 10px; }
+
+.about-wrapper {
+  width: 100%;
+  height: 600px;
+  background-color: black;
+  color: white;
+  display: grid;
+  grid-template-columns: 1.5fr 2fr; }
+  .about-wrapper aside .box-aside-one {
+    width: 200px;
+    height: 250px;
+    background-color: #FFB800;
+    margin-top: 120px;
+    margin-left: 80px;
+    border: 1px solid rgba(255, 255, 255, 0.603);
+    border-radius: 5px; }
+  .about-wrapper aside .box-aside-two {
+    width: 200px;
+    height: 250px;
+    background-color: #FFB800;
+    margin: -190px 120px;
+    border: 1px solid rgba(255, 255, 255, 0.603);
+    border-radius: 5px; }
+  .about-wrapper main {
+    padding: 30px; }
+
+.project-wrapper {
+  width: 100%;
+  height: 600px;
+  background-color: black;
+  color: white; }
+
+.resume-wrapper {
+  width: 100%;
+  height: 700px;
+  background-color: black;
+  color: white; }
 
 @media (max-width: 576px) {
   .navbar {
